--- a/susanin-face/package.json
+++ b/susanin-face/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser-dynamic": "~11.0.5",
     "@angular/router": "~11.0.5",
     "@progress/kendo-angular-buttons": "^6.0.0",
+    "@progress/kendo-angular-charts": "^5.0.0",
     "@progress/kendo-angular-common": "^2.0.0",
     "@progress/kendo-angular-dateinputs": "^5.0.0",
     "@progress/kendo-angular-dropdowns": "^5.0.0",
@@ -34,14 +35,15 @@
     "@progress/kendo-angular-popup": "^4.0.0",
     "@progress/kendo-angular-treeview": "^5.0.0",
     "@progress/kendo-data-query": "^1.5.4",
-    "@progress/kendo-drawing": "^1.0.0",
+    "@progress/kendo-drawing": "^1.1.2",
     "@progress/kendo-licensing": "^1.0.2",
     "@progress/kendo-theme-bootstrap": "^4.28.0",
     "@progress/kendo-theme-default": "latest",
     "@progress/kendo-theme-material": "^3.26.0",
     "rxjs": "~6.6.0",
     "tslib": "^2.0.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "hammerjs": "^2.0.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1100.5",
